세션 회원가입 이메일인증 완료 및 디스코드 연동 완료